# polymorph_os

./: BOKRL_License.md  Cargo.toml  Gaussian_Splat_Engine_Paper.md  MDO_VM.md  MICT-Elastic-Memory_paper.md  README.md  build.rs  run.bat  run.sh  rust-toolchain.toml
kernel/: Cargo.toml
kernel/src/: allocator.rs  e1000.rs  gdt.rs  gpu_driver.rs  interrupts.rs  lib.rs  main.rs  mdo_vm.rs  memory.rs  mfs.rs  nvme.rs  pci.rs  serial.rs  splat.rs  splat_1.rs  target_github.md  vga_buffer.rs  virtio_gpu.rs  virtio_net.rs  virtio_pci.rs  virtqueue.rs
kernel/src/allocator/: mict_global_allocator.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  mouse_stream.rs  serial_stream.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
src/: main.rs
